# game-common

./: CMakeLists.txt
include/game-common/: gameCommon.hpp
include/game-common/drawable-container/: drawable-container.hpp
include/game-common/drawable-element/: drawable-element.hpp
include/game-common/enums/: collision-type-enum.hpp
include/game-common/models/: collision.hpp  point2d.hpp
include/game-common/transform/: transform.hpp
src/: collision.cpp  drawable-container.cpp  point2d.cpp
tests/: main.cpp  main.hpp
